# vantage-agent-charms

./: .gitignore  LICENSE  Makefile  README.md  justfile  pyproject.toml  repository.py
.github/workflows/: release.yaml  test.yaml
charms/jobbergate-agent/: README.md  charmcraft.yaml  pyproject.toml
charms/jobbergate-agent/src/: charm.py
charms/license-manager-agent/: CHANGELOG.md  README.md  charmcraft.yaml  pyproject.toml
charms/license-manager-agent/src/: charm.py
charms/vantage-agent/: .gitignore  README.md  charmcraft.yaml  pyproject.toml
charms/vantage-agent/src/: charm.py
jobbergate-agent/: .gitignore  README.md  charmcraft.yaml  jobbergate-agent.yaml
jobbergate-agent/src/: charm.py
license-manager-agent/: .gitignore  LICENCE.md  Makefile  charmcraft.yaml  license-manager-agent.yaml  tox.ini
license-manager-agent/src/: charm.py
pkgs/agent-snapper/: pyproject.toml
pkgs/agent-snapper/src/agent_snapper/: __init__.py  charmed_agent.py
vantage-agent/: Makefile  charmcraft.yaml
vantage-agent/lib/charms/vantage_agent/v0/: agent_snapper.py
vantage-agent/src/: charm.py
