[project]
name = "vantage-agent-charms"
version = "0.0"
requires-python = "==3.12.*"
dependencies = [
    "ops",
    "agent-snapper",
]

[project.optional-dependencies]
dev = [
    # Tests
    "ops[testing]~=2.22",
    "coverage[toml]",

    # Integration
    "jubilant ~= 1.0",
    "pytest ~= 8.3",
    "pytest-order ~= 1.3",

    # Linting
    "black",
    "ruff",
    "codespell",
    "pyright",

    # TiCS scan dependencies
    "flake8",
    "pylint",
    "pytest",
    "pyyaml",
]

[tool.uv.sources]
agent-snapper = { workspace = true }

[tool.uv.workspace]
members = ["charms/*", "projects/*", "pkgs/agent-snapper"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.paths]
source = ["charms", "*/_build", "pkgs"]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Spell checking tools configuration
[tool.codespell]
skip = "_build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.pytest_cache,.vscode,.coverage,.venv,cover"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.ignore = ["E501", "D107"]
lint.per-file-ignores = { "**/tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
] }
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 15
